public/v/release-4.0/_sources/getting_started/sensors/realsense_setup.rst.txt
=========================
Isaac ROS RealSense Setup
=========================

Camera Compatibility
--------------------

================= ==============
RealSense Model   Supported?
================= ==============
D455              ✓
D435i             ✓
D415              ✗
================= ==============

.. note::

   * It is required to use RealSense firmware `version 5.16.0.1 <https://dev.realsenseai.com/docs/firmware-releases-d400>`__,
     `librealsense SDK` `version v2.56.3 <https://github.com/IntelRealSense/librealsense/releases/tag/v2.56.3>`__
     and `realsense-ros` driver `version r/4.56.3 <https://github.com/IntelRealSense/realsense-ros/tree/r/4.56.3>`__.
     **Any deviation from these versions will break Isaac ROS examples.**

   * The correct versions of the `librealsense SDK` and the `realsense-ros` driver are automatically installed in the Isaac ROS environment
     when specifying the RealSense image key as explained in the :ref:`Setup Instructions <setup-instructions>`.

   *  For best results we suggest increasing the maximum Linux kernel receive buffer size as
      detailed `here <https://docs.ros.org/en/rolling/How-To-Guides/DDS-tuning.html#cyclone-dds-tuning>`__.

   *  The ``realsense-viewer`` tool has performance issues when running multiple cameras on the Jetson platforms. However the RealSense ROS drivers work fine with multiple cameras.

.. _setup-instructions:

Setup Instructions
------------------

This tutorial assumes that you have completed the instructions in :doc:`Developer Environment Setup </getting_started/index>`.

#. Start with the RealSense camera unplugged. Then, add RealSense udev rules to your host machine.

   .. code:: bash

      wget https://raw.githubusercontent.com/IntelRealSense/librealsense/v2.56.3/config/99-realsense-libusb.rules && \
      sudo mv 99-realsense-libusb.rules /etc/udev/rules.d/ && \
      sudo udevadm control --reload-rules && sudo udevadm trigger && echo "Successfully added udev rules"

   Verify that you have ``Successfully added udev rules`` in the output, which indicates all commands were successful.

#. Configure the Isaac ROS environment to include ``librealsense SDK`` and ``realsense-ros``.

   Create a file called ``~/.config/isaac-ros-cli/config.yaml`` with the following context:

   .. code:: bash

      mkdir -p ~/.config/isaac-ros-cli
      touch ~/.config/isaac-ros-cli/config.yaml

   .. code:: yaml

      docker:
        image:
          additional_image_keys:
            - realsense

#. Plug in your RealSense camera before activating the Isaac ROS environment in the next step.
   
#. Activate the Isaac ROS environment:

   .. code:: bash

      isaac-ros activate --build-local

   This ``--build-local`` flag rebuilds the container image using ``Dockerfile.realsense`` in one of its layered stages. Rebuilding can take several minutes.

   After the image has been built once, you can use ``isaac-ros activate`` to launch the container without rebuilding the image.

#. After the container image is rebuilt and you are inside the container, you can run the following commands to verify that the RealSense camera is connected.

   .. code:: bash

      rs-enumerate-devices

   Verify that this returns information about all connected RealSense cameras.

   .. note::

      The ``realsense-viewer`` tool requires a graphical environment, to use it you must connect the host to a monitor, use a remote desktop connection or similar.

   .. code:: bash

      realsense-viewer

   If you turn on the "Stereo Module" in the GUI, verify that you have something like the following:


.. figure:: :ir_lfs:`<resources/isaac_ros_docs/getting_started/realsense_viewer.png>`
   :align: center

If you come across issues, see if it's covered in :doc:`/troubleshooting/hardware_setup` or ``librealsense`` SDK `issues <https://github.com/IntelRealSense/librealsense/issues?q=is%3Aissue>`__.